// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/dockerfile/extract extractPackageFile() detects ["stage"] and ["final"] deps of docker multi-stage build. 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8.15.1-alpine",
    "datasource": "docker",
    "depName": "node",
    "depType": "stage",
    "replaceString": "node:8.15.1-alpine",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "1.7.3",
    "datasource": "docker",
    "depName": "golang",
    "depType": "stage",
    "replaceString": "golang:1.7.3",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "latest",
    "datasource": "docker",
    "depName": "alpine",
    "depType": "final",
    "replaceString": "alpine:latest",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() extracts images on adjacent lines 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": "sha256:d743b4141b02fcfb8beb68f92b4cd164f60ee457bf2d053f36785bf86de16b0d",
    "currentValue": "8.11.3-alpine",
    "datasource": "docker",
    "depName": "node",
    "depType": "stage",
    "replaceString": "node:8.11.3-alpine@sha256:d743b4141b02fcfb8beb68f92b4cd164f60ee457bf2d053f36785bf86de16b0d",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "1.1.1",
    "datasource": "docker",
    "depName": "buildkite/puppeteer",
    "depType": "final",
    "replaceString": "buildkite/puppeteer:1.1.1",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() extracts multiple FROM tags 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "6.12.3",
    "datasource": "docker",
    "depName": "node",
    "depType": "stage",
    "replaceString": "node:6.12.3",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "3.6-slim",
    "datasource": "docker",
    "depName": "python",
    "depType": "final",
    "replaceString": "python:3.6-slim",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles COPY --from 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.11.0",
    "datasource": "docker",
    "depName": "gcr.io/k8s-skaffold/skaffold",
    "depType": "final",
    "replaceString": "gcr.io/k8s-skaffold/skaffold:v0.11.0",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles abnormal spacing 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8.7.0",
    "datasource": "docker",
    "depName": "registry.allmine.info:5005/node",
    "depType": "final",
    "replaceString": "registry.allmine.info:5005/node:8.7.0",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles calico/node 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "calico/node",
    "depType": "final",
    "replaceString": "calico/node",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles comments 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles custom hosts 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8",
    "datasource": "docker",
    "depName": "registry2.something.info/node",
    "depType": "final",
    "replaceString": "registry2.something.info/node:8",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles custom hosts and suffix 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8-alpine",
    "datasource": "docker",
    "depName": "registry2.something.info/node",
    "depType": "final",
    "replaceString": "registry2.something.info/node:8-alpine",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles custom hosts with namespace 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8",
    "datasource": "docker",
    "depName": "registry2.something.info/someaccount/node",
    "depType": "final",
    "replaceString": "registry2.something.info/someaccount/node:8",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles custom hosts with port 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8",
    "datasource": "docker",
    "depName": "registry2.something.info:5005/node",
    "depType": "final",
    "replaceString": "registry2.something.info:5005/node:8",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles custom hosts with port without tag 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "registry2.something.info:5005/node",
    "depType": "final",
    "replaceString": "registry2.something.info:5005/node",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles digest 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": "sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles from as 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8.9.0-alpine",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:8.9.0-alpine",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles naked dep 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles namespaced images 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8",
    "datasource": "docker",
    "depName": "mynamespace/node",
    "depType": "final",
    "replaceString": "mynamespace/node:8",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles tag 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "8.9.0-alpine",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:8.9.0-alpine",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles tag and digest 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": "sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentValue": "8.9.0",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:8.9.0@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() handles ubuntu 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "18.04",
    "datasource": "docker",
    "depName": "ubuntu",
    "depType": "final",
    "replaceString": "ubuntu:18.04",
    "versioning": "ubuntu",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() is case insensitive 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() skips index reference COPY --from tags 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "6.12.3",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:6.12.3",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() skips named multistage COPY --from tags 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "6.12.3",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:6.12.3",
  },
]
`;

exports[`lib/manager/dockerfile/extract extractPackageFile() skips named multistage FROM tags 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "commitMessageTopic": "Node.js",
    "currentDigest": undefined,
    "currentValue": "6.12.3",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:6.12.3",
  },
]
`;

exports[`lib/manager/dockerfile/extract getDep() rejects null 1`] = `
Object {
  "skipReason": "invalid-value",
}
`;
